Prevent wrapping navigation items on smaller screens

--- a/src/assets/scss/components/_navigation.scss
+++ b/src/assets/scss/components/_navigation.scss
@@ -1,14 +1,19 @@
 /*---------------------------------------------------------------------------*\
     Navigation
 \*---------------------------------------------------------------------------*/
-.main-nav {
+nav {
   position: relative;// Fallback for IE
   position: sticky;
   top: 0;
+  margin: 0;
   height: $nav-height;
   text-align: center;
   background: $white;
+  flex-wrap: nowrap;
   z-index: 1;
+  .flexbox__item {
+    padding: 0;
+  }
   a {
     position: relative;
     display: inline-block;
